// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-nav-sidebar should render close navigation sidebar with items 1`] = `
<wpp-nav-sidebar application-name="App" class="wpp-nav-sidebar" exportparts="nav-sidebar, body, header-wrapper, header, ws-wrapper, ws-inner" open="false" style="z-index: 899;">
  <mock:shadow-root>
    <aside class="nav-sidebar open" part="nav-sidebar">
      <div class="nav-wrapper" part="body">
        <div class="title-wrapper" part="header-wrapper">
          <slot name="header" part="header"></slot>
        </div>
        <div class="items-wrapper" part="ws-wrapper">
          <slot part="ws-inner"></slot>
        </div>
      </div>
    </aside>
  </mock:shadow-root>
  <wpp-nav-sidebar-item class="wpp-nav-sidebar-item" exportparts="label, icon-chevron, extended-item, link-item, tooltip, title, divider, icon-start, icon-end, ws-inner, icon-start, icon-end, ws-wrapper" label="Dashboard" path="/dashboard" tabindex="0">
    <mock:shadow-root>
      <a class="item" href="/dashboard" part="link-item" tabindex="-1">
        <div class="icon-wrapper" part="icon-start-wrapper">
          <slot class="slot-icon-start-fallback" name="icon-start" part="icon-start"></slot>
        </div>
        <p class="label open" part="label">
          Dashboard
        </p>
        <div class="icon-end-wrapper icon-wrapper" part="icon-end-wrapper">
          <slot class="slot-icon-end-fallback" name="icon-end" part="icon-end"></slot>
        </div>
      </a>
      <div class="sub-items-wrapper" part="ws-wrapper">
        <slot part="ws-inner"></slot>
      </div>
    </mock:shadow-root>
    <wpp-icon-globe slot="icon-start"></wpp-icon-globe>
  </wpp-nav-sidebar-item>
  <wpp-nav-sidebar-item class="wpp-nav-sidebar-item" exportparts="label, icon-chevron, extended-item, link-item, tooltip, title, divider, icon-start, icon-end, ws-inner, icon-start, icon-end, ws-wrapper" extended="" label="Projects" tabindex="0">
    <mock:shadow-root>
      <div class="item" part="extended-item">
        <div class="icon-wrapper" part="icon-start-wrapper">
          <slot class="slot-icon-start-fallback" name="icon-start" part="icon-start"></slot>
        </div>
        <p class="label open" part="label">
          Projects
        </p>
        <div class="icon-end-wrapper icon-wrapper" part="icon-end-wrapper">
          <slot class="slot-icon-end-fallback" name="icon-end" part="icon-end">
            <wpp-icon-chevron class="extended-icon" part="icon-chevron" size="m"></wpp-icon-chevron>
          </slot>
        </div>
      </div>
      <div class="sub-items-wrapper" part="ws-wrapper">
        <slot part="ws-inner"></slot>
      </div>
    </mock:shadow-root>
    <wpp-icon-favorites slot="icon-start"></wpp-icon-favorites>
    <wpp-nav-sidebar-item 01="" class="wpp-nav-sidebar-item" exportparts="label, icon-chevron, extended-item, link-item, tooltip, title, divider, icon-start, icon-end, ws-inner, icon-start, icon-end, ws-wrapper" label="Projects" path="/project1" tabindex="0">
      <mock:shadow-root>
        <a class="item without-icon-start" href="/project1" part="link-item" tabindex="-1">
          <div class="icon-wrapper" part="icon-start-wrapper">
            <slot class="slot-icon-start-fallback" name="icon-start" part="icon-start"></slot>
          </div>
          <p class="label open" part="label">
            Projects
          </p>
          <div class="icon-end-wrapper icon-wrapper" part="icon-end-wrapper">
            <slot class="slot-icon-end-fallback" name="icon-end" part="icon-end"></slot>
          </div>
        </a>
        <div class="sub-items-wrapper" part="ws-wrapper">
          <slot part="ws-inner"></slot>
        </div>
      </mock:shadow-root>
    </wpp-nav-sidebar-item>
    <wpp-nav-sidebar-item 02="" class="wpp-nav-sidebar-item" exportparts="label, icon-chevron, extended-item, link-item, tooltip, title, divider, icon-start, icon-end, ws-inner, icon-start, icon-end, ws-wrapper" label="Projects" path="/project2" tabindex="0">
      <mock:shadow-root>
        <a class="item without-icon-start" href="/project2" part="link-item" tabindex="-1">
          <div class="icon-wrapper" part="icon-start-wrapper">
            <slot class="slot-icon-start-fallback" name="icon-start" part="icon-start"></slot>
          </div>
          <p class="label open" part="label">
            Projects
          </p>
          <div class="icon-end-wrapper icon-wrapper" part="icon-end-wrapper">
            <slot class="slot-icon-end-fallback" name="icon-end" part="icon-end"></slot>
          </div>
        </a>
        <div class="sub-items-wrapper" part="ws-wrapper">
          <slot part="ws-inner"></slot>
        </div>
      </mock:shadow-root>
    </wpp-nav-sidebar-item>
    <wpp-nav-sidebar-item 03="" class="wpp-nav-sidebar-item" exportparts="label, icon-chevron, extended-item, link-item, tooltip, title, divider, icon-start, icon-end, ws-inner, icon-start, icon-end, ws-wrapper" label="Projects" path="/project3" tabindex="0">
      <mock:shadow-root>
        <a class="item without-icon-start" href="/project3" part="link-item" tabindex="-1">
          <div class="icon-wrapper" part="icon-start-wrapper">
            <slot class="slot-icon-start-fallback" name="icon-start" part="icon-start"></slot>
          </div>
          <p class="label open" part="label">
            Projects
          </p>
          <div class="icon-end-wrapper icon-wrapper" part="icon-end-wrapper">
            <slot class="slot-icon-end-fallback" name="icon-end" part="icon-end"></slot>
          </div>
        </a>
        <div class="sub-items-wrapper" part="ws-wrapper">
          <slot part="ws-inner"></slot>
        </div>
      </mock:shadow-root>
    </wpp-nav-sidebar-item>
    <wpp-nav-sidebar-item 04="" class="wpp-nav-sidebar-item" exportparts="label, icon-chevron, extended-item, link-item, tooltip, title, divider, icon-start, icon-end, ws-inner, icon-start, icon-end, ws-wrapper" label="Projects" path="/project4" tabindex="0">
      <mock:shadow-root>
        <a class="item without-icon-start" href="/project4" part="link-item" tabindex="-1">
          <div class="icon-wrapper" part="icon-start-wrapper">
            <slot class="slot-icon-start-fallback" name="icon-start" part="icon-start"></slot>
          </div>
          <p class="label open" part="label">
            Projects
          </p>
          <div class="icon-end-wrapper icon-wrapper" part="icon-end-wrapper">
            <slot class="slot-icon-end-fallback" name="icon-end" part="icon-end"></slot>
          </div>
        </a>
        <div class="sub-items-wrapper" part="ws-wrapper">
          <slot part="ws-inner"></slot>
        </div>
      </mock:shadow-root>
    </wpp-nav-sidebar-item>
  </wpp-nav-sidebar-item>
</wpp-nav-sidebar>
`;

exports[`wpp-nav-sidebar should render open navigation sidebar with items 1`] = `
<wpp-nav-sidebar application-name="App" class="wpp-nav-sidebar" exportparts="nav-sidebar, body, header-wrapper, header, ws-wrapper, ws-inner" open="true" style="z-index: 899;">
  <mock:shadow-root>
    <aside class="nav-sidebar open" part="nav-sidebar">
      <div class="nav-wrapper" part="body">
        <div class="title-wrapper" part="header-wrapper">
          <slot name="header" part="header"></slot>
        </div>
        <div class="items-wrapper" part="ws-wrapper">
          <slot part="ws-inner"></slot>
        </div>
      </div>
    </aside>
  </mock:shadow-root>
  <wpp-nav-sidebar-item class="wpp-nav-sidebar-item" exportparts="label, icon-chevron, extended-item, link-item, tooltip, title, divider, icon-start, icon-end, ws-inner, icon-start, icon-end, ws-wrapper" label="Dashboard" path="/dashboard" tabindex="0">
    <mock:shadow-root>
      <a class="item" href="/dashboard" part="link-item" tabindex="-1">
        <div class="icon-wrapper" part="icon-start-wrapper">
          <slot class="slot-icon-start-fallback" name="icon-start" part="icon-start"></slot>
        </div>
        <p class="label open" part="label">
          Dashboard
        </p>
        <div class="icon-end-wrapper icon-wrapper" part="icon-end-wrapper">
          <slot class="slot-icon-end-fallback" name="icon-end" part="icon-end"></slot>
        </div>
      </a>
      <div class="sub-items-wrapper" part="ws-wrapper">
        <slot part="ws-inner"></slot>
      </div>
    </mock:shadow-root>
    <wpp-icon-globe slot="icon-start"></wpp-icon-globe>
  </wpp-nav-sidebar-item>
  <wpp-nav-sidebar-item class="wpp-nav-sidebar-item" exportparts="label, icon-chevron, extended-item, link-item, tooltip, title, divider, icon-start, icon-end, ws-inner, icon-start, icon-end, ws-wrapper" extended="" label="Projects" tabindex="0">
    <mock:shadow-root>
      <div class="item" part="extended-item">
        <div class="icon-wrapper" part="icon-start-wrapper">
          <slot class="slot-icon-start-fallback" name="icon-start" part="icon-start"></slot>
        </div>
        <p class="label open" part="label">
          Projects
        </p>
        <div class="icon-end-wrapper icon-wrapper" part="icon-end-wrapper">
          <slot class="slot-icon-end-fallback" name="icon-end" part="icon-end">
            <wpp-icon-chevron class="extended-icon" part="icon-chevron" size="m"></wpp-icon-chevron>
          </slot>
        </div>
      </div>
      <div class="sub-items-wrapper" part="ws-wrapper">
        <slot part="ws-inner"></slot>
      </div>
    </mock:shadow-root>
    <wpp-icon-favorites slot="icon-start"></wpp-icon-favorites>
    <wpp-nav-sidebar-item 01="" class="wpp-nav-sidebar-item" exportparts="label, icon-chevron, extended-item, link-item, tooltip, title, divider, icon-start, icon-end, ws-inner, icon-start, icon-end, ws-wrapper" label="Projects" path="/project1" tabindex="0">
      <mock:shadow-root>
        <a class="item without-icon-start" href="/project1" part="link-item" tabindex="-1">
          <div class="icon-wrapper" part="icon-start-wrapper">
            <slot class="slot-icon-start-fallback" name="icon-start" part="icon-start"></slot>
          </div>
          <p class="label open" part="label">
            Projects
          </p>
          <div class="icon-end-wrapper icon-wrapper" part="icon-end-wrapper">
            <slot class="slot-icon-end-fallback" name="icon-end" part="icon-end"></slot>
          </div>
        </a>
        <div class="sub-items-wrapper" part="ws-wrapper">
          <slot part="ws-inner"></slot>
        </div>
      </mock:shadow-root>
    </wpp-nav-sidebar-item>
    <wpp-nav-sidebar-item 02="" class="wpp-nav-sidebar-item" exportparts="label, icon-chevron, extended-item, link-item, tooltip, title, divider, icon-start, icon-end, ws-inner, icon-start, icon-end, ws-wrapper" label="Projects" path="/project2" tabindex="0">
      <mock:shadow-root>
        <a class="item without-icon-start" href="/project2" part="link-item" tabindex="-1">
          <div class="icon-wrapper" part="icon-start-wrapper">
            <slot class="slot-icon-start-fallback" name="icon-start" part="icon-start"></slot>
          </div>
          <p class="label open" part="label">
            Projects
          </p>
          <div class="icon-end-wrapper icon-wrapper" part="icon-end-wrapper">
            <slot class="slot-icon-end-fallback" name="icon-end" part="icon-end"></slot>
          </div>
        </a>
        <div class="sub-items-wrapper" part="ws-wrapper">
          <slot part="ws-inner"></slot>
        </div>
      </mock:shadow-root>
    </wpp-nav-sidebar-item>
    <wpp-nav-sidebar-item 03="" class="wpp-nav-sidebar-item" exportparts="label, icon-chevron, extended-item, link-item, tooltip, title, divider, icon-start, icon-end, ws-inner, icon-start, icon-end, ws-wrapper" label="Projects" path="/project3" tabindex="0">
      <mock:shadow-root>
        <a class="item without-icon-start" href="/project3" part="link-item" tabindex="-1">
          <div class="icon-wrapper" part="icon-start-wrapper">
            <slot class="slot-icon-start-fallback" name="icon-start" part="icon-start"></slot>
          </div>
          <p class="label open" part="label">
            Projects
          </p>
          <div class="icon-end-wrapper icon-wrapper" part="icon-end-wrapper">
            <slot class="slot-icon-end-fallback" name="icon-end" part="icon-end"></slot>
          </div>
        </a>
        <div class="sub-items-wrapper" part="ws-wrapper">
          <slot part="ws-inner"></slot>
        </div>
      </mock:shadow-root>
    </wpp-nav-sidebar-item>
    <wpp-nav-sidebar-item 04="" class="wpp-nav-sidebar-item" exportparts="label, icon-chevron, extended-item, link-item, tooltip, title, divider, icon-start, icon-end, ws-inner, icon-start, icon-end, ws-wrapper" label="Projects" path="/project4" tabindex="0">
      <mock:shadow-root>
        <a class="item without-icon-start" href="/project4" part="link-item" tabindex="-1">
          <div class="icon-wrapper" part="icon-start-wrapper">
            <slot class="slot-icon-start-fallback" name="icon-start" part="icon-start"></slot>
          </div>
          <p class="label open" part="label">
            Projects
          </p>
          <div class="icon-end-wrapper icon-wrapper" part="icon-end-wrapper">
            <slot class="slot-icon-end-fallback" name="icon-end" part="icon-end"></slot>
          </div>
        </a>
        <div class="sub-items-wrapper" part="ws-wrapper">
          <slot part="ws-inner"></slot>
        </div>
      </mock:shadow-root>
    </wpp-nav-sidebar-item>
  </wpp-nav-sidebar-item>
</wpp-nav-sidebar>
`;
